--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
-set(HEADERS
-    ${HEADERS}
+set(SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+    ${SOURCE}
     PARENT_SCOPE
 )
-set(SOURCE
-    ${SOURCE}
+set(HEADERS
+    ${HEADERS}
     PARENT_SCOPE
 )
