Created basic Decl, Expr and Stmt ASTNodes

--- a/include/dusk/CMakeLists.txt
+++ b/include/dusk/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(AST)
 add_subdirectory(Basic)
 add_subdirectory(Frontend)
-add_subdirectory(Parser)
+add_subdirectory(Parse)
 
 set(HEADERS
     ${HEADERS}
