--- a/include/dusk/Parse/CMakeLists.txt
+++ b/include/dusk/Parse/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/Lexer.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Parser.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Token.h
     ${CMAKE_CURRENT_SOURCE_DIR}/TokenDefinition.h
     ${HEADERS}
