Added pretty printer

--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTVisitor.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/Block.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/Func.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
     ${HEADERS}
     PARENT_SCOPE
