--- a/lib/AST/CMakeLists.txt
+++ b/lib/AST/CMakeLists.txt
@@ -1,10 +1,9 @@
 set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Block.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Func.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.cpp
     ${HEADERS}
     PARENT_SCOPE
