--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -5,6 +5,7 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
     ${HEADERS}
     PARENT_SCOPE
