--- a/lib/AST/CMakeLists.txt
+++ b/lib/AST/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.cpp
     ${HEADERS}
     PARENT_SCOPE
