Added node ownership

--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTDiagnostic.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTVisitor.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Diagnostics.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
