--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(AST)
 add_subdirectory(Basic)
 add_subdirectory(Frontend)
+add_subdirectory(IRGen)
 add_subdirectory(Parser)
 
 set(SOURCE
