--- a/lib/AST/CMakeLists.txt
+++ b/lib/AST/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTDiagnostic.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Decl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Diagnostics.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.cpp
