--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -1,7 +1,11 @@
 set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/Context.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.h
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TopLevelExpr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TopLevelExpr.h
