--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Type.h
     ${HEADERS}
     PARENT_SCOPE
 )
