--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Scope.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TopLevelExpr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TopLevelExpr.h
     ${SOURCE}
