--- a/lib/AST/CMakeLists.txt
+++ b/lib/AST/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTContext.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTWalker.cpp
