--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/ASTContext.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTNode.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTPrinter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/ASTVisitor.h
