--- a/include/dusk/Frontend/CMakeLists.txt
+++ b/include/dusk/Frontend/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/CompilerInstance.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CompilerInvocation.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Formatter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/SourceFile.h
     ${HEADERS}
     PARENT_SCOPE
