--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -11,6 +11,7 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Type.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/TypeRepr.h
     ${HEADERS}
     PARENT_SCOPE
 )
