--- a/lib/Parser/CMakeLists.txt
+++ b/lib/Parser/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/ParsePattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Parser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ParseStmt.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ParseType.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Token.cpp
     ${SOURCE}
     PARENT_SCOPE
