--- a/include/dusk/CMakeLists.txt
+++ b/include/dusk/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(Basic)
 add_subdirectory(Frontend)
 add_subdirectory(IRGen)
 add_subdirectory(Parse)
+add_subdirectory(Sema)
 
 set(HEADERS
     ${HEADERS}
