--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(Basic)
 add_subdirectory(Frontend)
 add_subdirectory(IRGen)
 add_subdirectory(Parser)
+add_subdirectory(Sema)
 
 set(SOURCE
     ${SOURCE}
