Moved duplicating Sema and IRGen scope implementation into ASTScope

--- a/include/dusk/AST/CMakeLists.txt
+++ b/include/dusk/AST/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/DiagnosticsParse.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Expr.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Pattern.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Scope.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Stmt.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Type.h
     ${CMAKE_CURRENT_SOURCE_DIR}/TypeRepr.h
