--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -1,12 +1,18 @@
 set(SOURCE
-    ${CMAKE_CURRENT_SOURCE_DIR}/Context.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Address.h
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/GenStmt.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenFunc.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenFunc.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenModule.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenModule.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenFunc.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenFunc.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenModule.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenModule.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LoopInfo.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LoopInfo.h
     ${SOURCE}
     PARENT_SCOPE
 )
