Added new ASTWalker behavior

--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -15,6 +15,8 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenFunc.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenModule.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenModule.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenValue.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/IRGenValue.h
     ${CMAKE_CURRENT_SOURCE_DIR}/LoopInfo.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LoopInfo.h
     ${SOURCE}
