Context managing memory of all allocated AST elements

--- a/include/dusk/Sema/CMakeLists.txt
+++ b/include/dusk/Sema/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/Sema.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/TypeResolver.h
     ${HEADERS}
     PARENT_SCOPE
 )
