--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -1,13 +1,16 @@
 set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/Address.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Alignment.h
     ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenDecl.h
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenExpr.h
     ${CMAKE_CURRENT_SOURCE_DIR}/GenFunc.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenFunc.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenLValue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenModule.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenModule.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/GenRValue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenType.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GenType.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IRGenerator.cpp
