[Compiler][Feature] Allow asceding and descending ranges

--- a/stdlib/runtime/CMakeLists.txt
+++ b/stdlib/runtime/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(RUNTIME_HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/iter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/io.h
     ${RUNTIME_HEADERS}
     PARENT_SCOPE
@@ -6,6 +7,7 @@ set(RUNTIME_HEADERS
 
 set(RUNTIME_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/io.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/iter.cpp
     ${RUNTIME_SOURCE}
     PARENT_SCOPE
 )
